--- a/src/app/create-status/create-status.page.html
+++ b/src/app/create-status/create-status.page.html
@@ -1,42 +1,56 @@
+
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Menú creación de turnos</ion-title>
-  </ion-toolbar>
+  <mat-toolbar color="primary">
+    <button (click)="return()" slot = "start" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
+    <span>Menu de creación  de turnos</span>
+    <img src="../../assets/img/OrchestraLogo2.png" class="img" alt="Photo of a Shiba Inu">
+    <span class="example-spacer"></span>
+  </mat-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-item lines = "none">
-    <ion-icon (click)="return()" name="arrow-back-outline" slot="start"></ion-icon>
-  </ion-item>
+<ion-content>  
   <form [formGroup]="statusCreateForm" (ngSubmit)="onFormSubmit()">
-    <ion-item>
-      <ion-label position="floating"></ion-label>
-      <ion-input formControlName="type" placeholder = "Tipo" type="text" required></ion-input>
-      <ion-label color="danger" *ngIf="statusCreateForm.controls.type.errors?.required && (statusCreateForm.touched || statusCreateForm.dirty)">* El tipo es obligatorio </ion-label>
-      <ion-label color="danger" *ngIf="statusCreateForm.controls.type.errors?.minlength && (statusCreateForm.touched || statusCreateForm.dirty)">* Mínimo 4 carácteres.</ion-label>
-    </ion-item>
+    <mat-form-field appearance="outline">
+      <mat-label>Tipo</mat-label>
+      <mat-select formControlName = "type" type = "text">
+        <mat-option value="Teletrabajo">Teletrabajo</mat-option>
+        <mat-option value="Presencial">Presencial</mat-option>
+        <mat-option value="Baja por enfermedad">Baja por enfermedad</mat-option>
+        <mat-option value="Baja por vacaciones">Baja por vacaciones</mat-option>
+        <mat-option value="Otro">Otro</mat-option>
+      </mat-select>
+    </mat-form-field>  
+    <mat-form-field class="form-field" appearance="outline">
+      <mat-label>Fecha de inicio</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName = "startDate">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+      <mat-error *ngIf="statusCreateForm.controls.startDate.touched && statusCreateForm.controls.startDate.invalid">
+        <span *ngIf="statusCreateForm.controls.startDate.errors.required">This field is mandatory.</span>
+      </mat-error>
+    </mat-form-field>
 
-    <ion-item>
-      <ion-label position="floating"></ion-label>
-      <ion-input formControlName="startDate" placeholder = "Fecha de inicio" type="text" required></ion-input>
-      <ion-label color="danger" *ngIf="statusCreateForm.controls.startDate.errors?.required && (statusCreateForm.touched || statusCreateForm.dirty)">* La fecha de inicio es obligatoria </ion-label>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="floating"></ion-label>
-      <ion-input formControlName="endDate" placeholder = "Fecha de finalización" type="text" required></ion-input>
-      <ion-label color="danger" *ngIf="statusCreateForm.controls.endDate.errors?.required && (statusCreateForm.touched || statusCreateForm.dirty)">* La fecha de finalización es obligatoria </ion-label>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="floating"></ion-label>
-      <ion-input formControlName="userEmail"placeholder = "Empleado" type="text" required></ion-input>
-      <ion-label color="danger" *ngIf="statusCreateForm.controls.userEmail.errors?.required && (statusCreateForm.touched || statusCreateForm.dirty)">* El autor es obligatorio </ion-label>
-    </ion-item>
-
+    <mat-form-field class="form-field" appearance="outline">
+      <mat-label>Fecha de finalización</mat-label>
+      <input matInput [matDatepicker]="picker2" formControlName = "endDate">
+      <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+      <mat-datepicker #picker2></mat-datepicker>
+      <mat-error *ngIf="statusCreateForm.controls.endDate.touched && statusCreateForm.controls.endDate.invalid">
+        <span *ngIf="statusCreateForm.controls.endDate.errors.required">This field is mandatory.</span>
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Usuario</mat-label>
+      <input matInput formControlName = "userEmail" type = "email"placeholder = "Empleado" required>
+      <mat-error *ngIf="statusCreateForm.controls.userEmail.touched && statusCreateForm.controls.userEmail.invalid">
+        <span *ngIf="statusCreateForm.controls.userEmail.errors.required">This field is mandatory.</span>
+      </mat-error>
+    </mat-form-field>  
     <ion-row>
       <ion-col>
-        <ion-button class = "add-form-submit" color = "tertiary" type="submit" shape="round" expand="block">Crear</ion-button>
+        <button mat-raised-button color = "primary" class = "add-form-submit"  type="submit" shape="round" expand="block">Crear</button>
       </ion-col>
     </ion-row>
   </form>
