--- a/src/app/employee-requests/employee-requests.page.html
+++ b/src/app/employee-requests/employee-requests.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content>
-  <iframe hidden=true src="http://localhost:8000/api/requests/compilar"></iframe>
+  <iframe hidden=true src="https://orchestraapp-laravel-ionic.herokuapp.com/api/requests/compilar"></iframe>
   <div class = "container">
     <mat-card color = "accent" *ngFor ="let r of req" class="example-card">
       <mat-card-header>
