--- a/src/app/employee-status/employee-status.page.html
+++ b/src/app/employee-status/employee-status.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content>
-  <iframe hidden=true src="http://localhost:8000/api/status/compilar"></iframe>
+  <iframe hidden=true src="https://orchestraapp-laravel-ionic.herokuapp.com/api/status/compilar"></iframe>
   <mat-form-field class="form-field" appearance="outline">
     <mat-label class = "label" >Búsqueda por email</mat-label>
     <input [(ngModel)]="search" type = "text" matInput>
