--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -7,10 +7,12 @@ ion-content{
     height: 10%;
     width: 90%;
     margin-left: 5%;
-    margin-top: 75.5%;
+    margin-top: 20%;
     align-self: center;
 }
-
+img{
+  max-height: 100%;
+  }
 .menu-buttons2{
   font-size: larger; 
   height: 10%;
@@ -24,16 +26,6 @@ ion-content{
   align-items: center;
   align-self: center;
 }
-@media (min-width: 1300px) {
-    .menu-buttons {
-      margin-left: 170px;  
-      height: 250px;
-      width: 650px;
-      margin-top: 375px;
-      margin-bottom: 375px;
-    } 
-
-  }
 
 /**
 * Generated theme by Material Theme Generator
