--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,8 +7,7 @@
 
 <ion-content [fullscreen]="true">
   <div class = "button-container">
-    <button  mat-raised-button color = "primary" href = "https://ayudadeproyecto.000webhostapp.com/"  color = "primary" >Ayuda en linea</button>
+    <button  mat-raised-button color = "primary" (click)=" requestReportViewer()"class="menu-buttons" >Ayuda en linea</button>
   </div>
-<iframe hidden=true src="http://localhost:8000/api/requests/compilar"></iframe>
   <!-- <app-explore-container name="Tab 3 page"></app-explore-container> -->
 </ion-content>
