--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,12 +7,12 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="settings-outline"></ion-icon>
+      <ion-icon name="person-outline"></ion-icon>
       <ion-label>Cuenta</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
+      <ion-icon name="settings-outline"></ion-icon>
       <ion-label>Opciones</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
