--- a/src/app/update-data/update-data.page.html
+++ b/src/app/update-data/update-data.page.html
@@ -1,53 +1,62 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>update-data</ion-title>
-  </ion-toolbar>
+  <mat-toolbar color="primary">
+    <button (click)="return()" slot = "start" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
+    <span>Actualizar un turno</span>
+    <img src="../../assets/img/OrchestraLogo2.png" class="img" alt="Photo of a Shiba Inu">
+    <span class="example-spacer"></span>
+  </mat-toolbar>
 </ion-header>
-
 <ion-content>
-  <ion-item lines = "none">
-    <ion-icon (click)="return()" name="arrow-back-outline" slot="start"></ion-icon>
-  </ion-item>
   <form [formGroup]="dataUpdateForm" (ngSubmit)="onFormSubmit()">
-    <ion-item>
+
+  <!--   <mat-form-field appearance="outline">
+      <mat-label>Usuario</mat-label>
+      <input matInput formControlName = "userEmail" type = "email"placeholder = "Empleado" required>
+      <mat-error *ngIf="statusCreateForm.controls.userEmail.touched && statusCreateForm.controls.userEmail.invalid">
+        <span *ngIf="statusCreateForm.controls.userEmail.errors.required">This field is mandatory.</span>
+      </mat-error>
+    </mat-form-field>   -->
+
+   <!--  <ion-item>
       <ion-label position="floating"></ion-label>
       <ion-input formControlName="DNI" placeholder = "DNI" type="text"></ion-input>
       <ion-label color="danger" *ngIf="dataUpdateForm.controls.DNI.errors?.minlength && (dataUpdateForm.touched || dataUpdateForm.dirty)">* Mínimo 4 carácteres.</ion-label>
-    </ion-item>
+   
+    </ion-item> -->
+ 
+    <mat-form-field appearance="outline">
+      <input matInput formControlName = "DNI" type = "text" placeholder = "DNI" required minlength="9">
+      <ion-label color="danger" *ngIf="dataUpdateForm.controls.DNI.errors?.minlength && (dataUpdateForm.touched || dataUpdateForm.dirty)">* Mínimo 9 carácteres.</ion-label>
+    </mat-form-field>  
 
-    <ion-item>
-      <ion-label position="floating"></ion-label>
-      <ion-input formControlName="name" placeholder = "Nombre" type="text"></ion-input>
-      <ion-label color="danger" *ngIf="dataUpdateForm.controls.name.errors?.minlength && (dataUpdateForm.touched || dataUpdateForm.dirty)">* Mínimo 4 carácteres.</ion-label>
-    </ion-item>
+    
+    <mat-form-field appearance="outline">
+      <input matInput formControlName = "name" type = "text" placeholder = "Nombre" required minlength="2">
+      <ion-label color="danger" *ngIf="dataUpdateForm.controls.name.errors?.minlength && (dataUpdateForm.touched || dataUpdateForm.dirty)">* Mínimo 2 carácteres.</ion-label>
+    </mat-form-field>  
 
-    <ion-item>
-      <ion-label position="floating"></ion-label>
-      <ion-input formControlName="firstSurname" placeholder = "Primer apellido" type="text"></ion-input>
-      <ion-label color="danger" *ngIf="dataUpdateForm.controls.firstSurname.errors?.minlength && (dataUpdateForm.touched || dataUpdateForm.dirty)">* Mínimo 4 carácteres.</ion-label>
-    </ion-item>
+    
+    <mat-form-field appearance="outline">
+      <input matInput formControlName = "firstSurname" type = "text" placeholder = "Primer Apellido" required minlength="2">
+      <ion-label color="danger" *ngIf="dataUpdateForm.controls.firstSurname.errors?.minlength && (dataUpdateForm.touched || dataUpdateForm.dirty)">* Mínimo 2 carácteres.</ion-label>
+    </mat-form-field>  
 
-    <ion-item>
-      <ion-label position="floating"></ion-label>
-      <ion-input formControlName="secondSurname" placeholder = "Segundo apellido" type="text"></ion-input>
-      <ion-label color="danger" *ngIf="dataUpdateForm.controls.secondSurname.errors?.minlength && (dataUpdateForm.touched || dataUpdateForm.dirty)">* Mínimo 4 carácteres.</ion-label>
-    </ion-item>
+  
+    <mat-form-field appearance="outline">
+      <input matInput formControlName = "secondSurname" type = "text" placeholder = "Segundo Apellido" required minlength="2">
+      <ion-label color="danger" *ngIf="dataUpdateForm.controls.secondSurname.errors?.minlength && (dataUpdateForm.touched || dataUpdateForm.dirty)">* Mínimo 2 carácteres.</ion-label>
+    </mat-form-field> 
 
-    <ion-item>
-      <ion-label position="floating"></ion-label>
-      <ion-input formControlName="phone" placeholder = "Teléfono" type="text"></ion-input>
-      <ion-label color="danger" *ngIf="dataUpdateForm.controls.phone.errors?.minlength && (dataUpdateForm.touched || dataUpdateForm.dirty)">* Mínimo 4 carácteres.</ion-label>
-    </ion-item>
-
-    <ion-item style="display:none">
-      <ion-label position="floating"></ion-label>
-      <ion-input formControlName="phone" placeholder = "Teléfono" type="text"></ion-input>
-      <ion-label color="danger" *ngIf="dataUpdateForm.controls.phone.errors?.minlength && (dataUpdateForm.touched || dataUpdateForm.dirty)">* Mínimo 4 carácteres.</ion-label>
-    </ion-item>
+    <mat-form-field appearance="outline">
+      <input matInput formControlName = "phone" type = "number" placeholder = "Teléfono" required max="999999999">
+      <ion-label color="danger" *ngIf="dataUpdateForm.controls.phone.errors?.minlength && (dataUpdateForm.touched || dataUpdateForm.dirty)">* Mínimo 2 carácteres.</ion-label>
+    </mat-form-field> 
 
     <ion-row>
       <ion-col>
-        <ion-button class = "add-form-submit" color = "tertiary" type="submit" shape="round" expand="block">Actualizar</ion-button>
+        <button mat-raised-button color = "primary" class = "add-form-submit"  type="submit" shape="round" expand="block">Actualizar</button>
       </ion-col>
     </ion-row>
   </form>
