--- a/src/app/update-request/update-request.page.scss
+++ b/src/app/update-request/update-request.page.scss
@@ -8,7 +8,9 @@ ion-content{
 .container{
   margin-top: 20%;
 }
-
+img{
+  max-height: 100%;
+  }
 mat-form-field.mat-form-field {
   width: 90%;
   margin-left: 5%;
