--- a/src/app/update-status/update-status.page.html
+++ b/src/app/update-status/update-status.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>Actualizar un turno</ion-title>   
   </ion-toolbar>
@@ -28,6 +28,58 @@
     <ion-row>
       <ion-col>
         <ion-button class = "update-form-submit" color = "tertiary" type="submit" shape="round" expand="block">Enviar</ion-button>
+      </ion-col>
+    </ion-row>
+
+  </form>
+</ion-content>
+ -->
+
+<ion-header>
+  <mat-toolbar color="primary">
+    <button (click)="return()" slot = "start" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
+    <span>Actualizar un turno</span>
+    <img src="../../assets/img/OrchestraLogo2.png" class="img" alt="Photo of a Shiba Inu">
+    <span class="example-spacer"></span>
+  </mat-toolbar>
+</ion-header>
+
+<ion-content>  
+  <form [formGroup]="statusUpdateForm" (ngSubmit)="onFormSubmit()">
+    <mat-form-field appearance="outline">
+      <mat-label>Tipo</mat-label>
+      <mat-select formControlName = "type" type = "text">
+        <mat-option value="Teletrabajo">Teletrabajo</mat-option>
+        <mat-option value="Presencial">Presencial</mat-option>
+        <mat-option value="Baja por enfermedad">Baja por enfermedad</mat-option>
+        <mat-option value="Baja por vacaciones">Baja por vacaciones</mat-option>
+        <mat-option value="Otro">Otro</mat-option>
+      </mat-select>
+    </mat-form-field>  
+    <mat-form-field class="form-field" appearance="outline">
+      <mat-label>Fecha de inicio</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName = "startDate">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+      <mat-error *ngIf="statusUpdateForm.controls.startDate.touched && statusUpdateForm.controls.startDate.invalid">
+        <span *ngIf="statusUpdateForm.controls.startDate.errors.required">This field is mandatory.</span>
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field class="form-field" appearance="outline">
+      <mat-label>Fecha de finalización</mat-label>
+      <input matInput [matDatepicker]="picker2" formControlName = "endDate">
+      <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+      <mat-datepicker #picker2></mat-datepicker>
+      <mat-error *ngIf="statusUpdateForm.controls.endDate.touched && statusUpdateForm.controls.endDate.invalid">
+        <span *ngIf="statusUpdateForm.controls.endDate.errors.required">This field is mandatory.</span>
+      </mat-error>
+    </mat-form-field>
+    <ion-row>
+      <ion-col>
+        <button mat-raised-button color = "primary" class = "update-form-submit"  type="submit" shape="round" expand="block">Actualizar</button>
       </ion-col>
     </ion-row>
 
