--- a/src/app/create-status/create-status.page.html
+++ b/src/app/create-status/create-status.page.html
@@ -1,4 +1,4 @@
-
+<div [class.alternative]="otherTheme">
 <ion-header>
   <mat-toolbar color="primary">
     <button (click)="return()" slot = "start" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
@@ -10,7 +10,7 @@
   </mat-toolbar>
 </ion-header>
 
-<ion-content>  
+<ion-content [color]="otherTheme==true ? 'light' : 'dark'">  
   <form [formGroup]="statusCreateForm" (ngSubmit)="onFormSubmit()">
     <mat-form-field appearance="outline">
       <mat-label>Tipo</mat-label>
@@ -55,3 +55,4 @@
     </ion-row>
   </form>
 </ion-content>
+</div>
