--- a/src/app/services/auth/login/login.page.html
+++ b/src/app/services/auth/login/login.page.html
@@ -1,3 +1,4 @@
+<div [class.alternative]="otherTheme">
 <ion-header>
   <mat-toolbar color="primary">
     <button (click)="return()" slot = "start" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
@@ -9,7 +10,7 @@
   </mat-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true" [color]="otherTheme==true ? 'light' : 'dark'">
   <h1></h1>
     <br/>
     <br/>
@@ -33,3 +34,4 @@
       </form>
     </div>
 </ion-content>
+</div>
