--- a/src/app/employee-requests/employee-requests.page.scss
+++ b/src/app/employee-requests/employee-requests.page.scss
@@ -25,3 +25,10 @@
     height: 100%;
     margin-left: 45%;
 }
+mat-expansion-panel{
+    width:100%;
+    
+}
+.mat-expansion-panel:not([class*='mat-elevation-z']) {
+    box-shadow: 0px 0px 0px -2px rgba(0, 0, 0, 0.2), 0px 0px 0px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px 0px rgba(0, 0, 0, 0.12); 
+  }
