--- a/src/app/employee-status/employee-status.page.html
+++ b/src/app/employee-status/employee-status.page.html
@@ -1,3 +1,4 @@
+<div [class.alternative]="otherTheme">
 <ion-header>
   <mat-toolbar color="primary">
     <button (click)="return()" slot = "start" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
@@ -9,7 +10,7 @@
   </mat-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [color]="otherTheme==true ? 'light' : 'dark'">
   <iframe hidden=true src="https://orchestraapp-laravel-ionic.herokuapp.com/api/status/compilar"></iframe>
   <mat-form-field class="form-field" appearance="outline">
     <mat-label class = "label" >Búsqueda por email</mat-label>
@@ -50,3 +51,4 @@
     <button *ngIf = "admin" mat-raised-button color = "primary" class = "menu-buttons" (click) = "statusReportViewer()" >Ver informe de turnos</button>
   </ion-toolbar>
 </ion-footer>
+</div>
