--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,13 +1,16 @@
+<div [class.alternative]="otherTheme" >
 <ion-header>
   <mat-toolbar color="primary">
     <img src="../../assets/img/OrchestraLogo.png" alt="Orchestra Logo">
     <span class="example-spacer"></span>
   </mat-toolbar>
 </ion-header>
-
-<ion-content [fullscreen]="true">
+  
+<ion-content [fullscreen]="true" [color]="otherTheme==true ? 'light' : 'dark'">
   <div class = "button-container">
     <button  mat-raised-button color = "primary" (click)=" requestReportViewer()"class="menu-buttons" >Ayuda en linea</button>
+    <button (click)="changeTheme()" mat-raised-button color="primary">Change Theme</button>
   </div>
   <!-- <app-explore-container name="Tab 3 page"></app-explore-container> -->
 </ion-content>
+</div>
