--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom" lines = "none">
-    <ion-tab-button tab="tab1">
+  <ion-tab-bar slot="bottom" lines = "none" [color]="otherTheme==true ? 'light' : 'dark'">
+    <ion-tab-button tab="tab1" >
       <ion-icon name="home-outline"></ion-icon>
       <ion-label>Inicio</ion-label>
     </ion-tab-button>
@@ -15,6 +15,7 @@
       <ion-icon name="settings-outline"></ion-icon>
       <ion-label>Opciones</ion-label>
     </ion-tab-button>
+    
   </ion-tab-bar>
 
 </ion-tabs>
