--- a/src/app/update-data/update-data.page.html
+++ b/src/app/update-data/update-data.page.html
@@ -1,3 +1,4 @@
+<div [class.alternative]="otherTheme">
 <ion-header>
   <mat-toolbar color="primary">
     <button (click)="return()" slot = "start" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
@@ -8,7 +9,7 @@
     <span class="example-spacer"></span>
   </mat-toolbar>
 </ion-header>
-<ion-content>
+<ion-content [color]="otherTheme==true ? 'light' : 'dark'">
   <form [formGroup]="dataUpdateForm" (ngSubmit)="onFormSubmit()">
 
   <!--   <mat-form-field appearance="outline">
@@ -61,3 +62,4 @@
     </ion-row>
   </form>
 </ion-content>
+</div>
