--- a/src/app/update-request/update-request.page.html
+++ b/src/app/update-request/update-request.page.html
@@ -1,3 +1,4 @@
+<div [class.alternative]="otherTheme">
 <ion-header>
   <mat-toolbar color="primary">
     <button (click)="return()" slot = "start" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
@@ -9,7 +10,7 @@
   </mat-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [color]="otherTheme==true ? 'light' : 'dark'">
   <div class="container">
     <form [formGroup]="requestUpdateForm" (submit)="submit()">
       <mat-form-field appearance="outline">
@@ -48,3 +49,4 @@
     </form>
   </div>
 </ion-content>
+</div>
