removed_chrome_scrollbar

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,7 +6,7 @@
   </mat-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" [color]="otherTheme==true ? 'light' : 'dark'">
+<ion-content [fullscreen]="true" [color]="otherTheme==true ? 'light' : 'dark'"class="cosa">
 
   <div class = "container">
     <button mat-raised-button *ngIf = "!logged" class = "menu-buttons4" color = "primary" (click) = "loginPage()" >Iniciar <br> sesión</button>
