--- a/src/global.scss
+++ b/src/global.scss
@@ -8,12 +8,10 @@
  * For more information on global stylesheets, visit the documentation:
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
- ion-content{
-  --ion-background-color:#161313;
+
+ ion-content {
+  --overflow: hidden;
 }
-
-
-
 
 /* Core CSS required for Ionic components to work properly */
 @import "~@ionic/angular/css/core.css";
