--- a/src/app/employee-requests/dialod-confirm-delete.html
+++ b/src/app/employee-requests/dialod-confirm-delete.html
@@ -1,6 +1,6 @@
 <h3 mat-dialog-title>Cerrar sesión</h3>
 <div mat-dialog-content class="mat-typography">
-  <p>¿Seguro que quiere cerrar sesión?</p>
+  <p>¿Seguro que quiere eliminar esta solicitud?</p>
 </div>
 <div mat-dialog-actions >
   <button mat-raised-button backgronud="primary"(click)="closeDialog()">No</button>
