--- a/src/app/employee-status/employee-status.page.scss
+++ b/src/app/employee-status/employee-status.page.scss
@@ -9,7 +9,8 @@
 
 }
 .footer{
-    background-color: #161313;
+    position:fixed;
+    bottom: 0px;
 }
 mat-form-field.mat-form-field {
     width: 90%;
