--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,14 +7,11 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" [color]="otherTheme==true ? 'light' : 'dark'">
-  
-
-      <!-- <ion-button (click) = "isLogged()" class = "menu-buttons" shape = "square" color = "tertiary">Gestión de <br> solicitudes</ion-button>
-      <ion-button (click) = "isLogged2()" class = "menu-buttons" shape = "square" color = "tertiary">Turnos de  <br> trabajo</ion-button> -->
-      <button mat-raised-button color = "primary" class = "menu-buttons" (click) = "isLogged()"  matBadge="{{uncheckedRequests}}" matBadgePosition="after" matBadgeColor="warn">Gestión de <br> solicitudes</button>
+  <div>
+    <button mat-raised-button color = "primary" class = "menu-buttons" (click) = "isLogged()" *ngIf = "!logged" >Gestión de <br> solicitudes</button>
+      <button mat-raised-button color = "primary" class = "menu-buttons" (click) = "isLogged()" *ngIf = "logged" matBadge="{{uncheckedRequests}}" matBadgePosition="after" matBadgeColor="warn">Gestión de <br> solicitudes</button>
       <button mat-raised-button color = "primary" class = "menu-buttons2" (click) = "isLogged2()" >Turnos de  <br> trabajo</button>
       
-
-  <!-- <app-explore-container name="Tab 1 page"></app-explore-container> -->
+</div>
 </ion-content>
 </div>
