--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true" [color]="otherTheme==true ? 'light' : 'dark'">
   <div class = "button-container">
     <button  mat-raised-button color = "primary" (click)=" requestReportViewer()"class="menu-buttons" >Ayuda en linea</button>
-    <button (click)="changeTheme()" mat-raised-button color="primary">Change Theme</button>
+    <button (click)="goPreferences()" mat-raised-button color="primary"class="menu-buttons2">Preferencias</button>
   </div>
   <!-- <app-explore-container name="Tab 3 page"></app-explore-container> -->
 </ion-content>
