--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -10,4 +10,12 @@ img{
           margin-top: 20%;
           align-self: center;
       }
-     
+      .menu-buttons2{
+        font-size: larger; 
+        height: 20%;
+        width: 80%;
+        margin-left: 10%;
+        
+        margin-top: 5%;
+        align-self: center;
+    }
