--- a/src/app/preferences/preferences.page.html
+++ b/src/app/preferences/preferences.page.html
@@ -13,7 +13,7 @@
     
   <ion-content [fullscreen]="true" [color]="otherTheme==true ? 'light' : 'dark'">
     <div class = "button-container">
-      <button (click)="changeTheme()" mat-raised-button color="primary" class="menu-buttons">Change Theme</button>
+      <button (click)="changeTheme()" mat-raised-button color="primary" class="menu-buttons">Cambiar Tema</button>
     </div>
     <!-- <app-explore-container name="Tab 3 page"></app-explore-container> -->
   </ion-content>
